# trackplication

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth.py
backend/app/: auth.py  config.py  db.py  extraction.py  fetch.py  main.py  models.py  ratelimit.py  routes.py  schemas.py  security.py
backend/tests/: conftest.py  test_auth.py  test_crud.py  test_extraction.py  test_fetch.py  test_ollama.py  test_ratelimit.py
backend/trackplication_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  theme.ts  types.ts
frontend/src/components/: ApiKeyGate.tsx  ApplicationModal.tsx  ApplicationRow.tsx  ApplicationsTable.tsx  AuthGate.tsx  ChatPanel.tsx  Controls.tsx  EmptyState.tsx  ExtractCard.tsx  Sidebar.tsx  SummaryCards.tsx  Toast.tsx  icons.tsx
